crates/checker/src/operation_checker/tests/snapshots/nitrogql_checker__operation_checker__tests__fragments__fragment_spread_recursion.snap
---
source: checker/src/operation_checker/tests/mod.rs
expression: "check_operation_document(&schema, &doc)"
---
[
    CheckError {
        position: Pos {
            line: 8,
            column: 16,
            file: 0,
            builtin: false,
        },
        message: RecursingFragmentSpread {
            name: "F",
        },
        additional_info: [],
    },
]
