crates/checker/src/operation_checker/tests/snapshots/nitrogql_checker__operation_checker__tests__fragments__wrong_fragment_target_obj.snap
---
source: checker/src/operation_checker/tests/mod.rs
expression: "check_operation_document(&schema, &doc)"
---
[
    CheckError {
        position: Pos {
            line: 2,
            column: 16,
            file: 0,
            builtin: false,
        },
        message: FragmentConditionNeverMatches {
            condition: "Post",
            scope: "User",
        },
        additional_info: [
            (
                Pos {
                    line: 24,
                    column: 12,
                    file: 0,
                    builtin: false,
                },
                DefinitionPos {
                    name: "Post",
                },
            ),
            (
                Pos {
                    line: 12,
                    column: 12,
                    file: 0,
                    builtin: false,
                },
                DefinitionPos {
                    name: "User",
                },
            ),
        ],
    },
]
