crates/checker/src/operation_checker/tests/snapshots/nitrogql_checker__operation_checker__tests__fragments__wrong_inline_fragment_target_union.snap
---
source: checker/src/operation_checker/tests/mod.rs
expression: "check_operation_document(&schema, &doc)"
---
[
    CheckError {
        position: Pos {
            line: 3,
            column: 20,
            file: 0,
            builtin: false,
        },
        message: FragmentConditionNeverMatches {
            condition: "PostOrTag",
            scope: "User",
        },
        additional_info: [
            (
                Pos {
                    line: 44,
                    column: 12,
                    file: 0,
                    builtin: false,
                },
                DefinitionPos {
                    name: "PostOrTag",
                },
            ),
            (
                Pos {
                    line: 12,
                    column: 12,
                    file: 0,
                    builtin: false,
                },
                DefinitionPos {
                    name: "User",
                },
            ),
        ],
    },
]
